--- a/www/templates/customer/main-abstract.html
+++ b/www/templates/customer/main-abstract.html
@@ -7,7 +7,8 @@
         <ul class="list">
           <a ui-sref="customer.dash" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-social-buffer"></i>Home</a>
           <a ui-sref="customer.profile" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-person"></i>Profile</a>
-          <!--a ui-sref="customer.setting" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-gear-a"></i>Setting</a-->
+          <a ui-sref="customer.note" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-android-list"></i>Note</a>
+		  <a ui-sref="customer.reservation" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-clock"></i> Reservation</a>
           <a ui-sref="customer.contact" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-email"></i> Contact</a>
           <a ui-sref="customer.help" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-help"></i>Help</a>
         </ul>
