--- a/www/templates/owner/dash.html
+++ b/www/templates/owner/dash.html
@@ -52,7 +52,7 @@
 			</div>
 			<div class="col">
 				<div class="card">
-					<div class="item item-avatar">
+					<div class="item item-avatar" ui-sref="owner.reservation">
 						<div class="item-pull-left"><span class="ionicons ion-arrow-graph-up-right"></span></div>
 						<h2>Reservation</h2>
 						<p>Comming soon</p>
