--- a/www/templates/customer/dashboard.html
+++ b/www/templates/customer/dashboard.html
@@ -14,20 +14,22 @@
                 <h4 class="strong">{{userProfile.code}}</h4>
                 <button class="button button-block button-outline icon-left ion-android-list button-positive" ui-sref="customer.note">Note</button>
                 <ion-list>
-                    <ion-item class="list-item item-avatar item-button-right" ng-repeat="store in userProfile.stores">
+                    <ion-item class="list-item item-avatar item-positive-outline" ng-repeat="store in userProfile.stores">
                         <div class="item-char" ui-sref="customer.info({id:store.id})">{{store.title | firstChar }}</div>
+						<div class="pull-right enable-pointer-events">
+							<button class="button" ng-click="toggleBusinessHour(store)" ng-class="store.showBusinessHour ? 'button-positive' : 'button-default'">
+								<i class="icon ion-clock"></i>
+							</button>
+						</div>
                         <div class="detail" ng-hide="store.showBusinessHour">
                             <h2>{{store.title}}</h2>
                             <p class="address">{{ store.address }}, {{ store.city}}, {{store.state}}, {{ store.zipcode }}</p>
                             <p>{{store.phone}}</p>
                         </div>
                         <div class="business-hour" ng-show="store.showBusinessHour">{{store.business_hour}}</div>
-                        <button class="button" ng-click="toggleBusinessHour(store)" ng-class="store.showBusinessHour ? 'button-positive' : 'button-default'">
-                            <i class="icon ion-clock"></i>
-                        </button>
                     </ion-item>
                 </ion-list>
-                <button class="button button-block button-outline icon-left ion-android-checkmark-circle button-positive" ui-sref="customer.around" ng-show="userProfile.stores.length < 5">Add store</button>
+				<button class="button button-block button-outline icon-left ion-android-list button-positive" ui-sref="customer.reservation">Reservation</button>
                 <br/><br/><br/>
             </div>
         </div>
