--- a/www/templates/customer/reservation.html
+++ b/www/templates/customer/reservation.html
@@ -1,6 +1,32 @@
 <ion-view view-title="Reservation" name="customer-reservation-view">
+    <ion-nav-buttons side="left">
+        <button class="button button-icon icon ion-ios-minus-outline" ng-click="data.showDelete = !data.showDelete"></button>
+    </ion-nav-buttons>
     <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
-    <ion-content class="padding">
-        Comming soon
+    <ion-nav-buttons side="right">
+        <button class="button button-stable" ng-click="createReservation()"><i class="ion ion-plus"></i></button>
+    </ion-nav-buttons>
+    <ion-content class="tabbed-content-within-sidemenu-app padding">
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
+        <div class="flash-message {{ flashMessage.className }}" ng-class="" ng-if="flashMessage.visibility">
+            {{ flashMessage.message }}
+        </div>
+        <ion-header-bar class="bar bar-header item-input-inset" ng-show="customerReservations.length > 0">
+            <label class="item-input-wrapper">
+                <i class="icon ion-ios-search placeholder-icon"></i>
+                <input type="search" placeholder="Search" ng-model="formData.keyword" ng-enter="doRefresh()"/>
+            </label>
+            <button class="button button-clear" ng-click="doRefresh()"><i class="ion ion-android-search"></i></button>
+        </ion-header-bar>
+        <ion-list show-delete="data.showDelete">
+            <ion-item class="list-item" ng-repeat="item in customerReservations" ng-class="statusClass(item.status)" ng-click="detailReservation(item)">
+                <ion-delete-button class="ion-minus-circled" ng-click="doRemove($event,item)"></ion-delete-button>
+                <span class="item-note date-time">{{ item.created_at | asDate | date: APP_CONFIG.FORMAT.DATE }}</span>
+                <p><span class="strong positive">Prefer:</span> {{ item.prefer }}</p>
+				<p><span class="strong positive">Date time:</span> {{ item.datetime | asDate | date:APP_CONFIG.FORMAT.DATETIME }}</p>
+				<p><span class="strong positive">Status:</span> {{ item.status }}</p>
+				<p>{{ item.content }}</p>
+            </ion-item>
+        </ion-list>
     </ion-content>
 </ion-view>
