--- a/www/templates/landing.html
+++ b/www/templates/landing.html
@@ -4,12 +4,28 @@
         <!--back-img="bg1.jpg,bg2.jpg,bg3.jpg,bg4.jpg,bg5.jpg" back-url="/img/"-->
         <div class="vm-container">
             <div class="vm-body">
-                <div class="card padding">
-                    <h3 class="title text-center"> Welcome to My Spa 247</h3>
-                    <p>Hundreds of witty articles have been written around the topic of landing pages. We all know the basic facts – that these are the pages a visitor reaches after clicking on a banner ad or a promotional link, and that they play a crucial marketing role by converting leads into customers for the business.</p>
+                <div class="card padding text-center">
+                    <h3 class="title"> Welcome to My Spa 247</h3>
+                    <p class="">Everything you need for your business and favourite.</p>
                 </div>
-                <button class="button button-block button-outline button-positive" ui-sref="login">Sign in</button>
-                <button class="button button-block button-outline button-positive" ui-sref="signup">Sign up</button>
+                <button class="button button-block button-calm" ui-sref="login">Sign in</button>
+                <button class="button button-block button-calm" ui-sref="signup">Sign up</button>
+                <div class="row">
+                    <div class="col">
+                        <a href="http://www.nails-finder.com" target="_blank" class="padding icon-left ion-ios-checkmark-outline button button-block button-outline button-positive">Nails</a>
+                    </div>
+                    <div class="col">
+                        <a href="http://www.nails-finder.com" target="_blank" class="padding icon-left ion-ios-checkmark-outline button button-block button-outline button-positive">Hair</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <a href="http://www.nails-finder.com" target="_blank" class="padding icon-left ion-ios-checkmark-outline button button-block button-outline button-positive">Wax</a>
+                    </div>
+                    <div class="col">
+                        <a href="http://www.nails-finder.com" target="_blank" class="padding  icon-left ion-ios-checkmark-outline button button-block button-outline button-positive">Facial</a>
+                    </div>
+                </div>
             </div>
         </div>
     </ion-content>
