--- a/www/templates/owner/dash.html
+++ b/www/templates/owner/dash.html
@@ -58,7 +58,7 @@
 						<p>Comming soon</p>
 					</div>
 					<div class="item text-center">
-						<div class="x-large">0</div>
+						<div class="x-large">{{ data.reservationSize ? data.reservationSize : 'None'}}</div>
 					</div>
 				</div>
 			</div>
