--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,14 @@
 /* Empty. Add your own CSS if you like */
+.animate-show {
+  opacity: 1; }
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
+  transition: all linear 0.5s; }
+
+.animate-show.ng-hide {
+  line-height: 0;
+  opacity: 0; }
+
 .strong {
   font-weight: 600; }
 
@@ -44,8 +54,9 @@ select.form-control {
   select.form-control option {
     padding: 5px; }
 
-.input-label {
-  color: #387ef5; }
+.input-label, .label {
+  color: #387ef5;
+  font-size: 1.2em; }
 
 .date-time {
   font-style: italic; }
@@ -222,6 +233,9 @@ select.form-control {
   text-align: center;
   line-height: 2.1em;
   vertical-align: middle; }
+.list .item .business-hour {
+  animation-name: fadeOut;
+  animation-timing-function: ease-in; }
 
 .card .item-pull-left {
   position: absolute;
@@ -263,19 +277,17 @@ select.form-control {
   width: 100%;
   min-height: 300px;
   border: 5px solid #FFF; }
-  .slider .slider-slide {
-    min-width: 400px; }
-    .slider .slider-slide img {
-      max-height: 500px; }
-    .slider .slider-slide .off {
-      background: rgba(255, 0, 0, 0.9);
-      position: absolute;
-      font-size: 2em;
-      width: auto;
-      padding: 20px;
-      top: 0;
-      right: 0;
-      color: #fff; }
+  .slider .slider-slide img {
+    max-height: 500px; }
+  .slider .slider-slide .off {
+    background: rgba(255, 0, 0, 0.9);
+    position: absolute;
+    font-size: 2em;
+    width: auto;
+    padding: 20px;
+    top: 0;
+    right: 0;
+    color: #fff; }
 
 /************** Star rating ***************/
 .star-rating {
