--- a/www/templates/customer/feedback.html
+++ b/www/templates/customer/feedback.html
@@ -1,4 +1,7 @@
 <ion-view view-title="Feedback" name="customer-feedback-view">
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
     <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
     <ion-nav-buttons side="right">
         <button class="button button-stable" ng-click="openModal()"><i class="ion ion-plus"></i></button>
