--- a/www/templates/customer/info.html
+++ b/www/templates/customer/info.html
@@ -1,5 +1,7 @@
 <ion-view cache-view="true" view-title="Information" name="customer-info-view">
-    <ion-nav-buttons side="left"></ion-nav-buttons>
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
     <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
     <ion-content class="tabbed-content-within-sidemenu-app padding" has-header="true">
         <div class="list card">
