--- a/www/templates/customer/note.html
+++ b/www/templates/customer/note.html
@@ -1,6 +1,7 @@
 <ion-view view-title="Note" name="customer-note-view">
     <ion-nav-buttons side="left">
         <button class="button button-icon icon ion-ios-minus-outline" ng-click="data.showDelete = !data.showDelete"></button>
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
     <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
     <ion-nav-buttons side="right">
