--- a/www/templates/owner/reservation.html
+++ b/www/templates/owner/reservation.html
@@ -1,6 +1,7 @@
 <ion-view view-title="Reservation" name="customer-reservation-view">
     <ion-nav-buttons side="left">
         <button class="button button-icon icon ion-ios-minus-outline" ng-click="data.showDelete = !data.showDelete"></button>
+		<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
     <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
     <ion-content class="tabbed-content-within-sidemenu-app padding">
@@ -8,15 +9,13 @@
         <div class="flash-message {{ flashMessage.className }}" ng-class="" ng-if="flashMessage.visibility">
             {{ flashMessage.message }}
         </div>
-        <ion-header-bar class="bar bar-header item-input-inset" ng-show="reservations.length > 0">
-            <label class="item-input-wrapper">
-                <i class="icon ion-ios-search placeholder-icon"></i>
-                <input type="search" placeholder="Search" ng-model="formData.keyword" ng-enter="doRefresh()"/>
-            </label>
-            <button class="button button-clear" ng-click="doRefresh()"><i class="ion ion-android-search"></i></button>
+        <ion-header-bar class="bar bar-header item-input-inset">
+			<div class="col">
+				<label><button class="button button-clear" ng-click="selectFilter($event)"><i class="ion ion-android-search"></i> Filter: {{ formText }}</button></label>
+			</div>
         </ion-header-bar>
         <ion-list show-delete="data.showDelete">
-            <ion-item class="list-item" ng-repeat="item in reservations" ng-class="statusClass(item.status)" ng-click="detailReservation(item)">
+            <ion-item class="list-item" ng-repeat="item in reservations" ng-class="statusClass(item.status)" ng-click="answerReservation(item)">
                 <ion-delete-button class="ion-minus-circled" ng-click="doRemove($event,item)"></ion-delete-button>
                 <span class="item-note date-time">{{ item.datetime | asDate | date: APP_CONFIG.FORMAT.DATE }}</span>
                 <p><span class="strong positive">Prefer:</span> {{ item.prefer }}</p>
