--- a/www/templates/partial/reservation-tmp.html
+++ b/www/templates/partial/reservation-tmp.html
@@ -15,8 +15,8 @@
 			</div>
             <div class="list list-inset">
                 <label class="item item-input item-stacked-label">
-					<span class="input-label">Prefer</span>
-                    <input type="text" placeholder="Prefer" ng-model="reservationData.prefer" autofocus=""/>
+					<span class="input-label">Prefer Technician</span>
+                    <input type="text" placeholder="Prefer Technician's name" ng-model="reservationData.prefer" autofocus=""/>
                 </label>
             </div>
             <div class="list list-inset">
@@ -27,7 +27,7 @@
             </div>
             <div class="list list-inset">
                 <label class="item item-input item-stacked-label">
-					<span class="input-label">Content</span>
+					<span class="input-label">Service name</span>
                     <textarea type="text" placeholder="Content" rows="8" cols="40" ng-model="reservationData.content"></textarea>
                 </label>
             </div><br/>
