add store list and unfavourite

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -283,6 +283,7 @@ select.form-control{
     .business-hour{
       animation-name: fadeOut;
       animation-timing-function: ease-in;
+      white-space: pre;
     }
   }
 }
