--- a/www/templates/owner/reservation.html
+++ b/www/templates/owner/reservation.html
@@ -18,7 +18,7 @@
             <ion-item class="list-item" ng-repeat="item in reservations" ng-class="statusClass(item.status)" ng-click="answerReservation(item)">
                 <ion-delete-button class="ion-minus-circled" ng-click="doRemove($event,item)"></ion-delete-button>
                 <span class="item-note date-time">{{ item.datetime | asDate | date: APP_CONFIG.FORMAT.DATE }}</span>
-                <p><span class="strong positive">Prefer:</span> {{ item.prefer }}</p>
+                <p><span class="strong positive">Prefer technican:</span> {{ item.prefer }}</p>
 				<p><span class="strong positive">Status:</span> {{ item.status }}</p>
 				<p>{{ item.content }}</p>
             </ion-item>
