--- a/www/templates/customer/store.html
+++ b/www/templates/customer/store.html
@@ -1,20 +1,32 @@
 <ion-view view-title="Store" name="customer-store-view">
     <ion-nav-buttons side="left">
-        <button class="button button-icon icon ion-ios-minus-outline" ng-click="data.showDelete = !data.showDelete"></button>
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
     <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
-    <ion-nav-buttons side="right">
-        <button class="button button-stable" ui-sref="customer.policy"><i class="ion ion-plus"></i></button>
-    </ion-nav-buttons>
-    <ion-content class="tabbed-content-within-sidemenu-app padding">
+    <ion-content class="tabbed-content-within-sidemenu-app padding" has-header="true">
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
+        <ion-header-bar class="bar bar-header item-input-inset">
+            <label class="item-input-wrapper">
+                <i class="icon ion-ios-search placeholder-icon"></i>
+                <input type="search" placeholder="Search" ng-model="formData.keyword" ng-enter="doRefresh()"/>
+            </label>
+            <button class="button button-clear" ng-click="doRefresh()"><i class="ion ion-android-search"></i></button>
+        </ion-header-bar>
         <ion-list>
-            <ion-item class="list-item" ng-repeat="item in stores" ng-click="storeInfo(item)">
-                <h2><span class="strong color-positive">{{item.title}}</span></h2>
-                <p class="address">{{ item.address }}, {{ item.city }}, {{ item.state }} {{ item.zipcode }}</p>
-                <div class="item-part">
-                    {{ item.business_hour }}
+            <ion-item class="list-item item-avatar item-positive-outline" ng-repeat="store in stores" ng-click="showPopup(store)">
+                <div class="pull-right enable-pointer-events" style="margin-right: -35px;">
+                    <button class="button" ng-click="toggleBusinessHour($event, store)" ng-class="store.showBusinessHour ? 'button-positive' : 'button-default'">
+                        <i class="icon ion-clock"></i>
+                    </button>
                 </div>
+                <div class="item-char">{{store.title | firstChar }}</div>
+                <div class="detail animate-show" ng-hide="store.showBusinessHour">
+                    <h2>{{store.title}}</h2>
+                    <p class="address">{{ store.address }}, {{ store.city}}, {{store.state}}, {{ store.zipcode }}</p>
+                    <p>{{store.phone}}</p>
+                </div>
+                <div class="business-hour animate-show" ng-show="store.showBusinessHour">{{store.business_hour}}</div>
+                <!--ion-option-button class="button-info text-center" ng-click="toggleBusinessHour($event, store)" ng-class="store.showBusinessHour ? 'button-positive' : 'button-default'"><i class="icon ion-clock"></i></ion-option-button-->
             </ion-item>
         </ion-list>
     </ion-content>
