--- a/www/templates/owner/dash.html
+++ b/www/templates/owner/dash.html
@@ -55,7 +55,7 @@
 					<div class="item item-avatar" ui-sref="owner.reservation">
 						<div class="item-pull-left"><span class="ionicons ion-arrow-graph-up-right"></span></div>
 						<h2>Reservation</h2>
-						<p>Comming soon</p>
+						<p>Reservation listing</p>
 					</div>
 					<div class="item text-center">
 						<div class="x-large">{{ data.reservationSize ? data.reservationSize : 'None'}}</div>
