--- a/www/templates/partial/reservation-tmp.html
+++ b/www/templates/partial/reservation-tmp.html
@@ -9,7 +9,7 @@
 					<span class="input-label">Store</span><br/>
 					<!--select class="form-control" ng-model="reservationData.store_id" ng-options="store.title for store in userProfile.stores track by store.id"></select-->
 					<select class="form-control" ng-model="reservationData.store_id" ng-disabled="reservationData.id">
-					<option ng-repeat="store in userProfile.stores" value="{{store.id}}">{{store.title}}</option>
+						<option ng-repeat="store in userProfile.stores" value="{{store.id}}" ng-selected="{{reservationData.store_id == store.id}}">{{store.title}}</option>
 					</select>
 				</label>
 			</div>
