--- a/www/templates/public/forgot_password.html
+++ b/www/templates/public/forgot_password.html
@@ -13,7 +13,7 @@
                     <input type="text" placeholder="Username/Email address" ng-model="data.username"/>
                 </label>
             </div>
-            <div class="list list-inset">
+            <!--div class="list list-inset">
                 <div class="item item-checkbox">
                     <label class="checkbox">
                         <input type="checkbox" ng-model="data.haveCode"/>
@@ -23,7 +23,7 @@
                 <label class="item item-input" ng-show="data.haveCode">
                     <input type="text" placeholder="Security code" ng-model="data.code"/>
                 </label>
-            </div>
+            </div-->
             <div class="button-bar">
                 <button class="button button-positive" ng-click="">Submit</button>
             </div>
