--- a/www/templates/customer/note.html
+++ b/www/templates/customer/note.html
@@ -12,7 +12,7 @@
         <div class="flash-message {{ flashMessage.className }}" ng-class="" ng-if="flashMessage.visibility">
             {{ flashMessage.message }}
         </div>
-        <ion-header-bar class="bar bar-header item-input-inset" ng-show="customerNotes.length > 0">
+        <ion-header-bar class="bar bar-header item-input-inset">
             <label class="item-input-wrapper">
                 <i class="icon ion-ios-search placeholder-icon"></i>
                 <input type="search" placeholder="Search" ng-model="formData.keyword" ng-enter="doRefresh()"/>
