--- a/www/templates/customer/store.html
+++ b/www/templates/customer/store.html
@@ -19,11 +19,11 @@
                         <i class="icon ion-clock"></i>
                     </button>
                 </div>
-                <div class="item-char">{{$index}}</div>
+                <div class="item-char">{{$index + 1}}</div>
                 <div class="detail animate-show" ng-hide="store.showBusinessHour">
                     <h2>{{store.title}}</h2>
                     <p class="address">{{ store.address }}, {{ store.city}}, {{store.state}}, {{ store.zipcode }}</p>
-                    <p>{{store.phone}}</p>
+                    <p>{{store.phone | tel}}</p>
                 </div>
                 <div class="business-hour animate-show" ng-show="store.showBusinessHour">{{store.business_hour}}</div>
                 <!--ion-option-button class="button-info text-center" ng-click="toggleBusinessHour($event, store)" ng-class="store.showBusinessHour ? 'button-positive' : 'button-default'"><i class="icon ion-clock"></i></ion-option-button-->
