--- a/www/templates/landing.html
+++ b/www/templates/landing.html
@@ -1,29 +1,21 @@
 <ion-view view-title="My Spa 247" name="landing-view" style="background: url('/img/bg4.jpg'); background-size: cover;">
     <ion-nav-bar class="bar-positive"></ion-nav-bar>
-    <ion-content class="padding">
+    <ion-content>
         <!--back-img="bg1.jpg,bg2.jpg,bg3.jpg,bg4.jpg,bg5.jpg" back-url="/img/"-->
+        <br/><br/><br/><br/>
         <div class="vm-container">
             <div class="vm-body">
                 <div class="card padding text-center">
                     <h3 class="title"> Welcome to My Spa 247</h3>
-                    <p class="">Everything you need for your business and favourite.</p>
-                </div>
-                <button class="button button-block button-calm" ui-sref="login">Sign in</button>
-                <button class="button button-block button-calm" ui-sref="signup">Sign up</button>
-                <div class="row">
-                    <div class="col">
-                        <a href="http://www.nails-finder.com" target="_blank" class="padding icon-left ion-ios-checkmark-outline button button-block button-outline button-positive">Nails</a>
-                    </div>
-                    <div class="col">
-                        <a href="http://www.nails-finder.com" target="_blank" class="padding icon-left ion-ios-checkmark-outline button button-block button-outline button-positive">Hair</a>
-                    </div>
+                    <p class="">Everything you need to start your day off.</p>
+                    <p>Receive offer - locate your best salon - make appointment.</p>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="http://www.nails-finder.com" target="_blank" class="padding icon-left ion-ios-checkmark-outline button button-block button-outline button-positive">Wax</a>
+                        <button class="button button-block button-calm" ui-sref="login">Sign in</button>
                     </div>
                     <div class="col">
-                        <a href="http://www.nails-finder.com" target="_blank" class="padding  icon-left ion-ios-checkmark-outline button button-block button-outline button-positive">Facial</a>
+                        <button class="button button-block button-calm" ui-sref="signup">Sign up</button>
                     </div>
                 </div>
             </div>
