--- a/www/templates/owner/offer.html
+++ b/www/templates/owner/offer.html
@@ -4,18 +4,18 @@
         <button class="button button-icon icon ion-ios-minus-outline" ng-click="data.showDelete = !data.showDelete"></button>
     </ion-nav-buttons>
 	<ion-nav-buttons side="right">
-        <button class="button button-stable" ng-click="createOffer()" ng-hide="storeOffers.length > 4"><i class="ion ion-plus"></i></button>
+        <button class="button button-stable" ng-click="createOffer()"><i class="ion ion-plus"></i></button>
     </ion-nav-buttons>
     <ion-content class="tabbed-content-within-sidemenu-app padding" has-header="true">
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
-        <div class="flash-message {{ flashMessage.className }}" ng-class="" ng-if="flashMessage.visibility">
+		<div class="flash-message {{ flashMessage.className }}" ng-class="" ng-if="flashMessage.visibility">
             {{ flashMessage.message }}
         </div>
         <ion-list show-delete="data.showDelete" class="list">
             <ion-item ng-repeat="offer in storeOffers" ng-click="detailOffer(offer)">
                 <ion-delete-button class="ion-minus-circled" ng-click="doRemove($event, offer)"></ion-delete-button>
+				<div class="pull-right text-right">{{offer.start_time | asDate | date: APP_CONFIG.FORMAT.DATE}}<br/>{{offer.end_time | asDate | date:APP_CONFIG.FORMAT.DATE}} </div>
                 <span class="strong color-positive"> {{ offer.subject }} ({{ offer.off }}{{ offer.off_type}})</span>
-                <div class="pull-right text-right">{{offer.start_time | asDate | date: APP_CONFIG.FORMAT.DATE}}<br/>{{offer.end_time | asDate | date:APP_CONFIG.FORMAT.DATE}} </div>
                 <div>{{offer.content}}</div>
             </ion-item>
             <!--div ng-repeat="offer in offers">
